--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+.p1,.p2{
+	margin:5px;
+	padding: 5px;
+}
+#btn{
+	width:45%;
+	background-color:transparent;
+}
+ table {
+      border-collapse: collapse;
+      width: 300px;
+      height: 300px;
+    }
+    td {
+      border: 1px solid black;
+      text-align: center;
+      font-size: 24px;
+      width: 100px;
+      height: 100px;
+    }
